Fix align logo

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -11,7 +11,7 @@
 
 .nav-menu-top {
   border-bottom: 1px solid #cccccc;
-  li > a {
+  li>a {
     color: #696060;
     min-height: 0px;
     letter-spacing: 1px;
@@ -27,26 +27,25 @@
       font-size: 13px;
     }
   }
-  .navbar-nav > li > a {
+  .navbar-nav>li>a {
     min-height: 0px;
-    letter-spacing: 0.5px;
-    // #606382
+    letter-spacing: 0.5px; // #606382
   }
-  .navbar-nav > li > a:hover {
+  .navbar-nav>li>a:hover {
     color: #ff005d;
     border-bottom: 3px solid transparent;
   }
-  .navbar-nav > li.active > a {
+  .navbar-nav>li.active>a {
     position: relative;
     top: 1px;
     border-bottom: 3px solid #d14e24;
     color: #d14e24;
-    border-bottom: 3px solid #e9190e;;
+    border-bottom: 3px solid #e9190e;
+    ;
     color: #e9190e;
     font-weight: 500;
   }
 }
-
 
 // .dropdown.dropdown-masked {
 //   position: static;
@@ -77,10 +76,8 @@
 //     opacity: 1;
 //   }
 // }
-
 .nav-menu-mid {
-  padding: 8px 0;
-  // min-height: 100px;
+  padding: 8px 0; // min-height: 100px;
   @media (min-width: 992px) {
     .col-md-1 {
       width: 9.333333%;
@@ -88,11 +85,11 @@
   }
   .navbar-nav {
     margin-top: 10px;
-    li > a {
+    li>a {
       min-height: 0;
     }
   }
-  li.dropdown:hover > .dropdown-menu {
+  li.dropdown:hover>.dropdown-menu {
     display: block;
   }
 }
@@ -102,26 +99,28 @@
   background-image: none;
   border: none;
 }
+
 .header-sticky-wrapper {
   background: #ff005d;
 }
+
 .header-sticky-wrapper ul {
   float: left;
   padding: 0;
   text-transform: uppercase;
   margin-top: -1px;
 }
+
 .header-sticky-wrapper ul li {
   font-size: 11px;
-  a {
-  }
-
+  a {}
 }
+
 .header-sticky-wrapper ul li:nth-child(n+10) {
   display: none;
 }
 
-.input-group  {
+.input-group {
   input {
     margin: 10px 0;
     font-size: 16px;
@@ -137,25 +136,30 @@
 .list-unstyled {
   min-width: 120px;
 }
+
 .list-unstyled li {
   padding: 4px 0;
 }
+
 .yamm .dropdown {
   position: static;
 }
+
 .yamm .container {
   position: relative;
 }
+
 .yamm .dropdown-menu {
-  left: auto;
-  // background: #1ba182;
+  left: auto; // background: #1ba182;
   // background: #ff005d;
 }
+
 .yamm .dropdown.yamm-fw .dropdown-menu {
   left: 0;
   right: 0;
   padding-bottom: 15px;
 }
+
 .yamm .yamm-content {
   padding: 20px 30px;
 }
@@ -164,18 +168,20 @@
   min-width: 335px !important;
 }
 
-.imgbox{
+.imgbox {
   width: 40px !important;
   display: inline-block;
   align-self: baseline;
   float: left;
 }
-.itemdetailsbox{
+
+.itemdetailsbox {
   height: 55px;
 }
-.imgitems{
+
+.imgitems {
   align: left;
-  float:left
+  float: left
 }
 
 .navbar-brand {
@@ -187,36 +193,45 @@
   }
 }
 
-.loader-hidden {
-}
+.loader-hidden {}
+
 .loader-overlay {
-    top:0;
-    left: 0;
-    opacity: 1;
-    z-index: 500000;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  z-index: 500000;
 }
 
 @keyframes example {
-    0%   {background-color:red; left:0px;}
-    50%  {background-color:red; left:300px;}
-    100%  {background-color:red; left:600px;}
+  0% {
+    background-color: red;
+    left: 0px;
+  }
+  50% {
+    background-color: red;
+    left: 300px;
+  }
+  100% {
+    background-color: red;
+    left: 600px;
+  }
 }
 
 /* The element to apply the animation to */
-div
-.progress-bar {
-    height: 2px;
-    width: 75px;
-    position: absolute;
-    background-color: red;
-    animation-name: example;
-    animation-duration: 1s;
+
+div .progress-bar {
+  height: 2px;
+  width: 75px;
+  position: absolute;
+  background-color: red;
+  animation-name: example;
+  animation-duration: 1s;
 }
+
 // .navbar-header
 // {
 //   width: 100%
 // }
-
 // #navbar-search-input {
 //   display: inline-block;
 //   font-size: 16px;
@@ -232,18 +247,15 @@ div
 //   border-radius: 4px 0 0 4px;
 //   border-right: 0;
 //   background: #f5f5f6;
-
 //   &:focus {
 //     background-color: #fff;
 //     border-color: #14cda8;
 //     box-shadow: none;
 //   }
 // }
-
 // .input-group-addon {
 //   background: #f5f5f6;
 // }
-
 // .desktop-query {
 //   width: 70%;
 //   float: left;
@@ -271,7 +283,6 @@ div
 //       border-color: #14cda8;
 //     }
 //   }
-
 //   a.desktop-submit {
 //     box-sizing: content-box;
 //     display: inline-block;
@@ -297,79 +308,79 @@ div
 //       // background-size: 1404px 105px;
 //       display: inline-block;
 //     }
-
 //   }
 // }
-
-ul.nav li.dropdown-toggle:hover > ul.dropdown-menu {
-    display: block !important;
+ul.nav li.dropdown-toggle:hover>ul.dropdown-menu {
+  display: block !important;
 }
 
 .dropdown-submenu {
-    position: relative;
+  position: relative;
 }
 
 .dropdown-submenu>.dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -6px;
-    margin-left: -1px;
-    -webkit-border-radius: 0 6px 6px 6px;
-    -moz-border-radius: 0 6px 6px;
-    border-radius: 0 6px 6px 6px;
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  -webkit-border-radius: 0 6px 6px 6px;
+  -moz-border-radius: 0 6px 6px;
+  border-radius: 0 6px 6px 6px;
 }
 
 .dropdown-submenu:hover>.dropdown-menu {
-    display: block;
+  display: block;
 }
+
 .dropdown-submenu a {
   font-size: 14px;
   text-transform: capitalize;
 }
+
 .dropdown-submenu>a:after {
-    display: block;
-    content: " ";
-    float: right;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #ccc;
-    margin-top: 5px;
-    margin-right: -10px;
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #ccc;
+  margin-top: 5px;
+  margin-right: -10px;
 }
 
 .dropdown-submenu:hover>a:after {
-    border-left-color: #fff;
+  border-left-color: #fff;
 }
 
 .dropdown-submenu.pull-left {
-    float: none;
+  float: none;
 }
 
 .dropdown-submenu.pull-left>.dropdown-menu {
-    left: -100%;
-    margin-left: 10px;
-    -webkit-border-radius: 6px 0 6px 6px;
-    -moz-border-radius: 6px 0 6px 6px;
-    border-radius: 6px 0 6px 6px;
+  left: -100%;
+  margin-left: 10px;
+  -webkit-border-radius: 6px 0 6px 6px;
+  -moz-border-radius: 6px 0 6px 6px;
+  border-radius: 6px 0 6px 6px;
 }
+
 @media screen and (max-width: 767px) {
-.input-group{
+  .input-group {
     display: none;
   }
-.navbar-toggle {
-  float: left;
+  .navbar-toggle {
+    float: left;
+  }
+  .omglogo {
+    width: 45%;
+    padding-left: 86px;
+    float: left;
+  }
+  .omglogo img {
+    max-width: 85px;
+  }
 }
-.omglogo {
-  width: 40%;
-  padding-left: 44px;
-  float: left;
 
-}
-.omglogo img {
-max-width: 93px;
-
-}
-}
